# mcconv

./: LICENSE  README.md  consts.py  coordinate_frames.ipynb  demo.ipynb  pyproject.toml
src/mcconv/: consts.py  converter.py  coordsys.py  demo.ipynb  transform.py  utils.py  visualize.py
src/notebooks/: test.ipynb
src/temp/: chignolin_ic.npy  ic2xyz_stats  xyz2ic_stats
